--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/leon
+spring.datasource.username=root
+spring.datasource.password=root
+spring.liquibase.change-log=classpath:db/changelog/changelog.sql
