--- a/pom.xml
+++ b/pom.xml
@@ -2,38 +2,41 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.5</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
-    <groupId>com.example</groupId>
+    <groupId>com.leon</groupId>
     <artifactId>hello-liquibase</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>hello-liquibase</name>
     <description>hello-liquibase</description>
+
     <properties>
         <java.version>1.8</java.version>
+        <liquibase.changeLogFile>${project.basedir}/changelog.sql</liquibase.changeLogFile>
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.20</version>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <!-- plugin for liquibase -->
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>4.2.0</version>
+                <configuration>
+                    <!--set values for Liquibase properties and settings
+                    for example, the location of a properties file to use-->
+                    <!--<propertyFile>liquibase.properties</propertyFile>-->
+                    <changeLogFile>changelog.sql</changeLogFile>
+                    <url>jdbc:mysql://localhost:3306/leon?useUnicode=true&amp;characterEncoding=utf8&amp;serverTimezone=GMT
+                    </url>
+                    <username>root</username>
+                    <password>root</password>
+                </configuration>
             </plugin>
         </plugins>
     </build>
